# genai-practice

./: .env  app.py  data_loader.py  embedding.py  main.py  pyproject.toml  text_splitter.py  vector_store.py
