[project]
name = "genai-part2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-google-vertexai>=3.2.3",
    "langchain-text-splitters>=1.1.2",
    "pillow>=12.2.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
